Thu Jul 31 15:29:28 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolitem.c (struct _GtkToolItemPrivate): remove unused
	overflow_item field.

Wed Jul 30 21:11:13 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolitem.h: make _gtk_tool_item_toolbar_reconfigured()
	an internal function

	* gtk/gtktoolitem.h: remove unused declaration of
	_gtk_tool_item_get_drag_window().

Wed Jul 30 17:03:58 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbutton.[ch]:
	(gtk_tool_button_new): swap icon_widget and label arguments to
	match BonoboUIToolbarButton.

	* gtk/gtktoolbar.h: un-deprecate gtk_toolbar_{set|unset}_style().

2003-07-30  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwidget.c (gtk_widget_class_init): Some updates to the DND signal docs.

2003-07-29  Tor Lillqvist  <tml@iki.fi>

	Fix for #108007, #112402, #117042: There was confusion in
	gdk/win32 at various places whether a window position refers to
	the decoration position or the client area position. Also whether
	window size includes decorations or not.
	
	The correct interpretation apparently is that in GDK (like in
	X11), a top-level window position means the decoration's position,
	but size means the window's inner size (client area size). In the
	Win32 API, the window size usually includes the decorations,
	though.
	
	* gdk/win32/gdkevents-win32.c (decode_key_lparam): Move inside
	#ifdef G_ENABLE_DEBUG.
	(handle_configure_event): New function, generates GDK_CONFIGURE
	events from WM_SIZE and WM_MOVE messages. Even if no event is
	generated because of the event mask, still set the private
	position and size fields. Calculate position and size correctly.
	(gdk_event_translate): Call handle_configure_event().

	* gdk/win32/gdkgeometry-win32.c: Cosmetics.

	* gdk/win32/gdkwindow-win32.c: Use GDI_CALL() and API_CALL()
	macros. Cosmetic debugging output changes.
	(SafeAdjustWindowRectEx): Remove. If an application wants to