@@ -43,6 +43,12 @@ struct _GtkRadioToolButton
 struct _GtkRadioToolButtonClass
 {
   GtkToggleToolButtonClass parent_class;
+
+  /* Padding for future expansion */
+  void (* _gtk_reserved1) (void);
+  void (* _gtk_reserved2) (void);
+  void (* _gtk_reserved3) (void);
+  void (* _gtk_reserved4) (void);
 };
 
 GType        gtk_radio_tool_button_get_type       (void) G_GNUC_CONST;
