@@ -42,6 +42,12 @@ struct _GtkSeparatorToolItem
 struct _GtkSeparatorToolItemClass
 {
   GtkToolItemClass parent_class;
+
+  /* Padding for future expansion */
+  void (* _gtk_reserved1) (void);
+  void (* _gtk_reserved2) (void);
+  void (* _gtk_reserved3) (void);
+  void (* _gtk_reserved4) (void);
 };
 
 GType        gtk_separator_tool_item_get_type (void) G_GNUC_CONST;
