@@ -53,6 +53,12 @@ struct _GtkToggleToolButtonClass
 
   /* signal */
   void (* toggled) (GtkToggleToolButton *button);
+
+  /* Padding for future expansion */
+  void (* _gtk_reserved1) (void);
+  void (* _gtk_reserved2) (void);
+  void (* _gtk_reserved3) (void);
+  void (* _gtk_reserved4) (void);
 };
 
 GType        gtk_toggle_tool_button_get_type       (void) G_GNUC_CONST;
