@@ -55,6 +55,12 @@ struct _GtkToolButtonClass
 
   /* signal */
   void       (* clicked)             (GtkToolButton    *tool_item);
+
+  /* Padding for future expansion */
+  void (* _gtk_reserved1) (void);
+  void (* _gtk_reserved2) (void);
+  void (* _gtk_reserved3) (void);
+  void (* _gtk_reserved4) (void);
 };
 
 GType        gtk_tool_button_get_type       (void);
